--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -28,7 +28,7 @@
         tools:listitem="@layout/item_tile" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/button_start"
         android:layout_width="187dp"
         android:layout_height="50dp"
         android:layout_marginEnd="10dp"
