Statistic & pause/resume & steps,time count

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -9,10 +9,30 @@
     android:foreground="@drawable/tile_ripple_effect"
     tools:context=".MainActivity">
 
+    <TextView
+        android:id="@+id/textView_steps2"
+        android:layout_width="170dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="#00FFF7F7"
+        android:text="Шагов: 1000"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#9E9E9E"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/gridLayout_gameBoard"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0" />
+
     <androidx.gridlayout.widget.GridLayout
         android:id="@+id/gridLayout_gameBoard"
         android:layout_width="350dp"
-        android:layout_height="341dp"
+        android:layout_height="350dp"
         android:layout_marginHorizontal="5dp"
         android:layout_marginVertical="5dp"
         android:background="@drawable/round_angle_8"
@@ -23,6 +43,7 @@
         app:layout_constraintHorizontal_bias="0.499"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.372"
         app:rowCount="4"
         tools:itemCount="16"
         tools:listitem="@layout/item_tile" />
@@ -53,7 +74,7 @@
         app:layout_constraintVertical_bias="0.924" />
 
     <ToggleButton
-        android:id="@+id/toggleButton"
+        android:id="@+id/toggleButton_pause"
         android:layout_width="165dp"
         android:layout_height="50dp"
         android:layout_marginStart="10dp"
@@ -93,7 +114,7 @@
         android:textStyle="bold"
         android:typeface="normal"
         app:backgroundTint="@null"
-        app:layout_constraintBottom_toTopOf="@+id/toggleButton"
+        app:layout_constraintBottom_toTopOf="@+id/toggleButton_pause"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/gridLayout_gameBoard"
@@ -101,6 +122,7 @@
         app:layout_constraintVertical_bias="1.0" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
         android:layout_width="165dp"
         android:layout_height="50dp"
         android:layout_marginStart="10dp"
@@ -125,10 +147,8 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.057"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.518" />
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
