--- a/app/src/main/res/drawable/round_angle_8.xml
+++ b/app/src/main/res/drawable/round_angle_8.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFA936" />
+    <solid android:color="@color/game_field_orange" />
     <corners android:radius="11dp" />
 </shape>
