--- a/app/src/main/res/drawable/tile_default_background.xml
+++ b/app/src/main/res/drawable/tile_default_background.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#3A3A3A" />
+    <solid android:color="?attr/tileBackgroundColor" />
     <corners android:radius="8dp" />
     <stroke
         android:width="5dp"
-        android:color="#FFCC58" />
+        android:color="?attr/tileStrokeColor" />
 
 </shape>
