--- a/app/src/main/res/layout/dialog_achievements.xml
+++ b/app/src/main/res/layout/dialog_achievements.xml
@@ -12,8 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="16dp"
-        android:text="Достижения"
-        android:textColor="#FFC107"
+        android:text="@string/achievements"
+        android:textColor="?attr/buttonTextColor"
         android:textSize="20sp"
         android:textStyle="bold" />
 
@@ -34,9 +34,9 @@
         android:clickable="true"
         android:contextClickable="true"
         android:foreground="@drawable/tile_ripple_effect"
-        android:text="Закрыть"
+        android:text="@string/close_button"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:textColor="#FFC107"
+        android:textColor="?attr/buttonTextColor"
         android:textStyle="bold"
         app:backgroundTint="@null" />
 
