--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
+    <color name="orange_tile_stroke">#FFCC58</color>
+    <color name="button_orange_text">#FFC107</color>
+    <color name="button_orange_text_light">#D5A106</color>
+    <color name="text_tile_orange">#FFE17A</color>
+    <color name="text_tile_orange_light">#C3AB5F</color>
+    <color name="game_field_orange">#FFA936</color>
+    <color name="tile_ripple_orange">#62FF9800</color>
+    <color name="dark_background">#3A3A3A</color>
+    <color name="background_main_dark">#1D1D1D</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="background_main_light">#E6E6E6</color>
+    <color name="light_background">#E9E9E9</color>
+    <color name="time_steps_text">#959595</color>
 </resources>
